tests/snapshots/parser_snapshots__parser_all@ast-10.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/language/10_generics.of
---
Err(
    "unexpected token ','",
)
