tests/snapshots/parser_snapshots__parser_all@ast-100.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/spec/05_extensions/extend_specialized.of
---
Err(
    "unexpected token ','",
)
