tests/snapshots/parser_snapshots__parser_all@ast-101.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/spec/04_structs_interfaces/struct_instantiation.of
---
Err(
    "unexpected token 'var'",
)
