tests/snapshots/parser_snapshots__parser_all@ast-103.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/spec/05_extensions/extend_generic_with_interface.of
---
Ok(
    Program {
        items: [
            Item {
                kind: Struct(
                    StructDecl {
                        name: "Wrapper",
                        is_extern: false,
                        generics: [
                            GenericParam {
                                name: "T",
                                bounds: [],
                            },
                        ],
                        fields: [
                            FieldDecl {
                                name: "value",
                                ty: Named(
                                    "T",
                                    [],
                                ),
                                is_pointer: false,
                            },
                        ],
                        methods: [],
                        implements: [],
                    },
                ),
                span: Span {
                    line: 1,
                    col: 7,
                    len: 6,
                },
            },
            Item {
                kind: Interface(
                    InterfaceDecl {
                        name: "Named",
                        generics: [],
                        fields: [],
                        methods: [
                            FunctionDecl {
                                name: "name",
                                has_self_param: true,
                                is_extern: false,
                                generics: [],
                                return_type: Some(
                                    Primitive(
                                        String,
                                    ),
                                ),
                                params: [],
                                body: None,
                                span: Span {
                                    line: 6,
                                    col: 11,
                                    len: 8,
                                },
                            },
                        ],
                        implements: [],
                    },
                ),
                span: Span {
                    line: 5,
                    col: 10,
                    len: 9,
                },
            },
            Item {
                kind: Extend(
                    ExtendDecl {
                        target: Named(
                            "Wrapper",
                            [
                                Named(
                                    "T",
                                    [],
                                ),
                            ],
                        ),
                        generic_params: [
                            GenericParam {
                                name: "T",
                                bounds: [],
                            },
                        ],
                        implements: [
                            Named(
                                "Named",
                                [],
                            ),
                        ],
                        methods: [
                            FunctionDecl {
                                name: "name",
                                has_self_param: true,
                                is_extern: false,
                                generics: [],
                                return_type: Some(
                                    Primitive(
                                        String,
                                    ),
                                ),
                                params: [],
                                body: Some(
                                    Block {
                                        statements: [],
                                        returns: Some(
                                            Literal(
                                                String(
                                                    "Wrapper",
                                                ),
                                            ),
                                        ),
                                    },
                                ),
                                span: Span {
                                    line: 10,
                                    col: 11,
                                    len: 8,
                                },
                            },
                        ],
                    },
                ),
                span: Span {
                    line: 9,
                    col: 7,
                    len: 6,
                },
            },
        ],
    },
)
