tests/snapshots/parser_snapshots__parser_all@ast-104.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/spec/07_error_management/error_checking.of
---
Err(
    "unexpected token 'var'",
)
