tests/snapshots/parser_snapshots__parser_all@ast-105.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/spec/07_error_management/error_union_return.of
---
Err(
    "unexpected token ','",
)
