tests/snapshots/parser_snapshots__parser_all@ast-106.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/spec/08_numeric_conversions/float_narrowing.of
---
Err(
    "unexpected token 'var'",
)
