tests/snapshots/parser_snapshots__parser_all@ast-107.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/spec/06_type_logic/is_operator.of
---
Ok(
    Program {
        items: [
            Item {
                kind: Function(
                    FunctionDecl {
                        name: "process",
                        has_self_param: false,
                        is_extern: false,
                        generics: [],
                        return_type: None,
                        params: [
                            ParamDecl {
                                name: "input",
                                ty: Union(
                                    [
                                        Primitive(
                                            Int64,
                                        ),
                                        Primitive(
                                            String,
                                        ),
                                    ],
                                ),
                                is_pointer: false,
                            },
                        ],
                        body: Some(
                            Block {
                                statements: [],
                                returns: Some(
                                    If(
                                        Is(
                                            Variable(
                                                "input",
                                            ),
                                            Primitive(
                                                Int64,
                                            ),
                                        ),
                                        Block {
                                            statements: [
                                                VarDecl(
                                                    "value",
                                                    None,
                                                    Some(
                                                        As(
                                                            Variable(
                                                                "input",
                                                            ),
                                                            Primitive(
                                                                Int64,
                                                            ),
                                                        ),
                                                    ),
                                                ),
                                            ],
                                            returns: None,
                                        },
                                        None,
                                    ),
                                ),
                            },
                        ),
                        span: Span {
                            line: 1,
                            col: 9,
                            len: 8,
                        },
                    },
                ),
                span: Span {
                    line: 1,
                    col: 9,
                    len: 8,
                },
            },
        ],
    },
)
