tests/snapshots/parser_snapshots__parser_all@ast-108.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/spec/09_null_handling/nullable_return.of
---
Err(
    "unexpected token 'var'",
)
