tests/snapshots/parser_snapshots__parser_all@ast-11.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/language/11_lists_maps_loops.of
---
Err(
    "unexpected token '('",
)
