tests/snapshots/parser_snapshots__parser_all@ast-110.snap
---
source: tests/parser_snapshots.rs
assertion_line: 19
expression: ast
input_file: examples/spec/05_extensions/extend_specialized.of
---
Ok(
    Program {
        items: [
            Item {
                kind: Struct(
                    StructDecl {
                        name: "Wrapper",
                        is_extern: false,
                        generics: [
                            GenericParam {
                                name: "T",
                                bounds: [],
                            },
                        ],
                        fields: [
                            FieldDecl {
                                name: "value",
                                ty: Named(
                                    "T",
                                    [],
                                ),
                                is_pointer: false,
                            },
                        ],
                        methods: [],
                        implements: [],
                    },
                ),
                span: Span {
                    line: 1,
                    col: 7,
                    len: 6,
                },
            },
            Item {
                kind: Extend(
                    ExtendDecl {
                        target: Named(
                            "Wrapper",
                            [
                                Primitive(
                                    Int32,
                                ),
                            ],
                        ),
                        generic_params: [],
                        implements: [],
                        methods: [
                            FunctionDecl {
                                name: "double",
                                has_self_param: true,
                                is_extern: false,
                                generics: [],
                                return_type: Some(
                                    Primitive(
                                        Int32,
                                    ),
                                ),
                                params: [],
                                body: Some(
                                    Block {
                                        statements: [],
                                        returns: Some(
                                            BinaryOp(
                                                Member(
                                                    SelfRef,
                                                    "value",
                                                ),
                                                Mul,
                                                Literal(
                                                    Int(
                                                        "2",
                                                    ),
                                                ),
                                            ),
                                        ),
                                    },
                                ),
                                span: Span {
                                    line: 6,
                                    col: 11,
                                    len: 8,
                                },
                            },
                        ],
                    },
                ),
                span: Span {
                    line: 5,
                    col: 7,
                    len: 6,
                },
            },
        ],
    },
)
