tests/snapshots/parser_snapshots__parser_all@ast-111.snap
---
source: tests/parser_snapshots.rs
expression: ast
input_file: examples/spec/11_collections/list_literal.of
---
Err(
    "unexpected token 'var'",
)
